[package]
name = "thanatos"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1"
log = "0.4"

image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = { version = "0.17", features = ["rayon"] }
#stacker = "0.1"
thiserror = "2"
crc32fast = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
rayon = "1.10.0"

[dev-dependencies]
